--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
@@ -146,7 +146,7 @@
     <value>Deaktivieren</value>
   </data>
   <data name="mfa_Desc" xml:space="preserve">
-    <value>Eine Zwei-Faktor Authentifizierungs (2FA) bietet eine zusätzliche Sicherheitsebene für Ihr Konto. Nach der Aktivierung benötigen Sie neben Ihrem Passwort auch einen weiteren Faktor zur Anmeldung. Diese Methode stellt sicher, dass nur Sie, selbst wenn Ihr Passwort kompromittiert ist, Zugang zu Ihrem Konto haben.</value>
+    <value>Die Zwei-Faktor-Authentifizierung (2FA) bietet eine zusätzliche Sicherheitsebene für Ihr Konto. Sobald diese aktiviert ist, benötigen Sie zusätzlich zu Ihrem Passwort einen weiteren Faktor, um sich anzumelden. Diese Methode stellt sicher, dass nur Sie auf Ihr Konto zugreifen können, selbst wenn Ihr Passwort kompromittiert ist. Um dies zu aktivieren, aktivieren Sie die Authentifizierungs-App.</value>
   </data>
   <data name="authenticator_Disable_Success" xml:space="preserve">
     <value>Die 2FA-Authentifizierung wurde deaktiviert</value>
@@ -201,5 +201,14 @@
   </data>
   <data name="authenticator_DisableAbortBtn" xml:space="preserve">
     <value>Abrechen</value>
+  </data>
+  <data name="authenticator_EnableFirst" xml:space="preserve">
+    <value>Die 2FA-Authentifizierung per Authentifizierungs-App muss aktiv sein.</value>
+  </data>
+  <data name="recovery_NoValidCodes" xml:space="preserve">
+    <value>Keine Gültigen Codes verfügbar</value>
+  </data>
+  <data name="recovery_NoValidCodes_Tooltip" xml:space="preserve">
+    <value>Es sind keine Wiederherstellungscodes verfügbar. Generieren Sie neue Wiederherstellungscodes, damit weiterhin eine Backup Option verfügbar ist.</value>
   </data>
 </root>
