--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Dialogs/RemoveDialog.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Dialogs/RemoveDialog.de.resx
@@ -97,16 +97,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="tabOverview" xml:space="preserve">
-    <value>Overview</value>
+  <data name="noBtn" xml:space="preserve">
+    <value>Abbrechen</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Account Security</value>
-  </data>
-  <data name="title" xml:space="preserve">
-    <value>Account Security</value>
-  </data>
-  <data name="tabSecurityKeys" xml:space="preserve">
-    <value>Security key</value>
+  <data name="yesBtn" xml:space="preserve">
+    <value>Fortfahren</value>
   </data>
 </root>
