--- a/SchulCloud.Web/SchulCloud.Web/Localization/Models/RenameModel.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Models/RenameModel.en.resx
@@ -97,16 +97,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="tabOverview" xml:space="preserve">
-    <value>Overview</value>
+  <data name="notEmpty" xml:space="preserve">
+    <value>The name must not be empty</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Account Security</value>
+  <data name="notEqual" xml:space="preserve">
+    <value>The name must be different from the previous one</value>
   </data>
-  <data name="title" xml:space="preserve">
-    <value>Account Security</value>
-  </data>
-  <data name="tabSecurityKeys" xml:space="preserve">
-    <value>Security key</value>
+  <data name="alreadyTaken" xml:space="preserve">
+    <value>This name is already taken</value>
   </data>
 </root>
