General improvements -Feature: Added PasskeysEnabled to user model in preparation for passkey auth. -Improvement: Replaced the authenticator disable modal with the RemoveDialog. -Improvement: Rename IsUsernameless to IsPasskey. -Improvement: Added the mime type to the file download. -Style: Removed the too many success toast. -Fix: Fixed spelling mistake on manage security key page. -Chore: Updated NuGet packages.

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
@@ -113,7 +113,7 @@
     <value>Verwendetes Protokoll: {0}</value>
   </data>
   <data name="securityKey_NoDesc" xml:space="preserve">
-    <value>Von diesem Sicherheitsschlüssel konnte keine Schreibung abgerufen werden.</value>
+    <value>Von diesem Sicherheitsschlüssel konnte keine Beschreibung abgerufen werden.</value>
   </data>
   <data name="securityKey_renameBtn" xml:space="preserve">
     <value>Umbenennen</value>
