FIDO2 2FA Authentication -Feature: Added security key 2fa verification to Verify2fa page. -Feature: Added the IUserTwoFactorSecurityKeyStore, the implementation and it SchulCloudUserManager methods. -Feature: Added 2FA via security keys to security manage page. -Improvement: Change JS interop prefix from __schulCloudJS to _schulCloud. -Fix: Fixed an error that occurre if userHandle is empty. -Fix: Fixed an error that fido2 cred's pdks are requested by UserId instead of their Id.

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
@@ -154,4 +154,13 @@
   <data name="registerModal_register" xml:space="preserve">
     <value>Hinzufügen</value>
   </data>
+  <data name="registerModal_Error" xml:space="preserve">
+    <value>Fehler beim Anfordern des Sicherheitsschlüssels</value>
+  </data>
+  <data name="registerModal_ErrorMessage" xml:space="preserve">
+    <value>Beim Anfordern des Sicherheitsschlüssels ist ein Fehler aufgetreten.</value>
+  </data>
+  <data name="registerModal_SaveError" xml:space="preserve">
+    <value></value>
+  </data>
 </root>
