--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
@@ -154,4 +154,10 @@
   <data name="registerModal" xml:space="preserve">
     <value>Add security key</value>
   </data>
+  <data name="registerModal_Error" xml:space="preserve">
+    <value>Error requesting security key</value>
+  </data>
+  <data name="registerModal_ErrorMessage" xml:space="preserve">
+    <value>An error occurred while requesting the security key.</value>
+  </data>
 </root>
