--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.de.resx
@@ -161,6 +161,6 @@
     <value>Beim Anfordern des Sicherheitsschlüssels ist ein Fehler aufgetreten.</value>
   </data>
   <data name="registerModal_SaveError" xml:space="preserve">
-    <value></value>
+    <value>Beim speichern des Sicherheitsschlüssels ist ein Fehler aufgetreten.</value>
   </data>
 </root>
