--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
@@ -160,4 +160,7 @@
   <data name="registerModal_ErrorMessage" xml:space="preserve">
     <value>An error occurred while requesting the security key.</value>
   </data>
+  <data name="registerModal_SaveError" xml:space="preserve">
+    <value>An error occurred while saving the security key.</value>
+  </data>
 </root>
