Some improvements (primary at pwd reset and change page) -Improvement: Removed FluentValidation from blazor project and moved validation to page. -Improvement: Added error handling to JSRuntime calls. -Fix: Fixed event callback problem with PasswordField.

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ChangePassword.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ChangePassword.de.resx
@@ -124,4 +124,7 @@
   <data name="form_NotEmpty" xml:space="preserve">
     <value>Das Feld darf nicht leer sein</value>
   </data>
+  <data name="form_ConfirmedPassword_NotMatch" xml:space="preserve">
+    <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
+  </data>
 </root>
