--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ChangePassword.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ChangePassword.en.resx
@@ -124,4 +124,7 @@
   <data name="form_NotEmpty" xml:space="preserve">
     <value>The field must not be empty</value>
   </data>
+  <data name="form_ConfirmedPassword_NotMatch" xml:space="preserve">
+    <value>The new password and the confirmed password do not match.</value>
+  </data>
 </root>
