--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
@@ -118,7 +118,7 @@
   <data name="resetForm_SubmitBtn" xml:space="preserve">
     <value>Passwort zurücksetzen</value>
   </data>
-  <data name="userForm_UserNotFound" xml:space="preserve">
+  <data name="userForm_User_NotFound" xml:space="preserve">
     <value>Der angegebene Benutzer konnte nicht gefunden werden.</value>
   </data>
   <data name="error" xml:space="preserve">
@@ -138,5 +138,11 @@
   </data>
   <data name="sent_Timeout" xml:space="preserve">
     <value>Passwort Zurücksetzungs Link kann nicht gesendet werden</value>
+  </data>
+  <data name="resetForm_ConfirmedPassword_NotMatch" xml:space="preserve">
+    <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
+  </data>
+  <data name="form_NotEmpty" xml:space="preserve">
+    <value>Das Feld darf nicht leer sein</value>
   </data>
 </root>
