--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.en.resx
@@ -106,7 +106,7 @@
   <data name="userForm_SubmitBtn" xml:space="preserve">
     <value>reset Password</value>
   </data>
-  <data name="userForm_UserNotFound" xml:space="preserve">
+  <data name="userForm_User_NotFound" xml:space="preserve">
     <value>The specified user could not be found.</value>
   </data>
   <data name="sendMailBtn" xml:space="preserve">
@@ -138,5 +138,11 @@
   </data>
   <data name="sent_Timeout" xml:space="preserve">
     <value>Password reset link cannot be sent</value>
+  </data>
+  <data name="resetForm_ConfirmedPassword_NotMatch" xml:space="preserve">
+    <value>The new password and the confirmed password do not match.</value>
+  </data>
+  <data name="form_NotEmpty" xml:space="preserve">
+    <value>The field must not be empty</value>
   </data>
 </root>
